# django-model-history-log

./: .hgtags  AUTHORS  COPYING  MANIFEST.in  README.md  pyproject.toml  requirements.in  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
model_history/: __init__.py  admin.py  apps.py  compat.py  exceptions.py  fields.py  models.py  version.py
model_history/locale/en/LC_MESSAGES/: django.mo  django.po
model_history/locale/it/LC_MESSAGES/: django.mo  django.po
model_history/migrations/: 0001_initial.py  __init__.py
tests/: settings.py  test_models.py  urls.py
